--- a/index.html
+++ b/index.html
@@ -106,17 +106,17 @@
 
 <h2 class="r3">Join Us in Ensuring a Flood-Resilient</h2>
 <section id="s1">
-<img id="i1" src="D:\B tech CSE\CHE110\Project\fds1.png" width="366" height="180"><br>
+<img id="i1" src="fds1.png" width="366" height="180"><br>
 <h3>Be a Part of the Solution</h3> 
 <p class="p4">By taking proactive steps to enhance flood resilience, we can build safer and more sustainable communities for generations to come.</p>
 </section>
 <section id="s1">
-<img id="i1" src="D:\B tech CSE\CHE110\Project\fds2.png" width="366" height="180"><br>
+<img id="i1" src="fds2.png" width="366" height="180"><br>
 <h3>Become a Volunteer</h3> 
 <p class="p4">Join our network of dedicated volunteers and make a difference by assisting flood-affected communities during their recovery.</p>
 </section>
 <section id="s1">
-<img id="i1" src="D:\B tech CSE\CHE110\Project\fds3.png" width="366" height="180"><br>
+<img id="i1" src="fds3.png" width="366" height="180"><br>
 <h3>Make a Donation</h3> 
 <p class="p4">Your generous contribution can support organizations working to provide immediate relief and long-term solutions to those impacted by floods.</p>
 </section>
