--- a/Kapurthala.html
+++ b/Kapurthala.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Kapurthala</h1><br>
-<img id="i1" src="D:\B tech CSE\CHE110\Project\sad2.svg" align="center" width="200" height="200"><br>
+<img id="i1" src="sad2.svg" align="center" width="200" height="200"><br>
 <p class="v1">0.4</p>
 <p class="v2">Floods per year</p>
 <h3>What to Do During a Flood</h3><br>
